--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Maîtrise le développement web de A à Z ! Découvre nos guides complets sur HTML, CSS, JavaScript, Bootstrap 5, Git, PHP 8 et MySQL 9. Tout ce dont tu as besoin pour devenir un pro du code, expliqué simplement et efficacement.">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <title>Guides Dev Web - Apprends HTML, CSS, JS, Bootstrap, Git, PHP & MySQL</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
